# ProjectStarterKit

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  create_structure.py  docker-compose.yml  pyproject.toml
config/: config.yaml  logging.yaml
scripts/: build_docker.sh  deploy.sh
src/sample_project/: main.py
src/sample_project/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/sample_project/constants/: __init__.py
src/sample_project/entities/: __init__.py
src/sample_project/pipelines/: predict_pipeline.py  train_pipeline.py
src/sample_project/utils/: common.py  config.py  logging.py
templates/: index.html
tests/: test_components.py
